# Lightrays

./: .gitignore  CMakeLists.txt  CircleMaterial.h  CollisionHandler.cpp  CollisionHandler.cpp.save  CollisionHandler.h  CollisionHandler.h.save  Lightray.cpp  Lightray.cpp.save  Lightray.h  Lightray.h.save  Lightrays.depend  Lightrays.layout  Material.cpp  Material.h  Project.cpp  Project.h  Project_lightrays.cpp  Project_lightrays.h  README.md  RayPath.cpp  RayPath.h  SFML_lightrays.cbp  SFML_lightrays.depend  SFML_lightrays.layout  Wall.cpp  Wall.cpp.save  Wall.h  Wall.h.save  source.cpp  source.cpp.save  vectorOperations.cpp  vectorOperations.h.save
include/: CollisionHandler.h  Hitresult.h  Lightray.h  Lightray.h.save  Material.h  Mirror.h  PhysicsObject.h  Project.h  Project_lightrays.h  Raypath.h  TwoPointObject.h  Wall.h  mathDefines.h  vectorOperations.h
src/: CircleMaterial.cpp  CircleMaterial.h  CollisionHandler.cpp  Hitresult.h  Lightray.cpp  Lightray.h  Material.h  Mirror.cpp  Mirror.h  PhysicsObject.cpp  Project_lightrays.cpp  Project_lightrays.h  RayPath.cpp  RayPath.h  Raypath.cpp  TwoPointObject.cpp  TwoPointObject.cpp.save  Wall.cpp  Wall.h  source.cpp  source.cpp.save  vectorOperations.cpp
